--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -85,39 +85,18 @@
   --text-86: 5.375rem;
   --text-86--line-height: 1.2;
 
-  --background-image-start: url('/images/work/bg-start.png');
-  --background-image-perk: url('/images/perks/perk-bg.png');
-
   --blur-220: 220px;
   --blur-400: 400px;
 }
 
-/*
-  The default border color has changed to `currentColor` in Tailwind CSS v4,
-  so we've added these compatibility styles to make sure everything still
-  looks the same as it did with Tailwind CSS v3.
-
-  If we ever want to remove these styles, we need to add an explicit border
-  color utility to any element that depends on these defaults.
-*/
-@layer base {
-  *,
-  ::after,
-  ::before,
-  ::backdrop,
-  ::file-selector-button {
-    border-color: var(--color-gray-200, currentColor);
-  }
-}
-
-@layer utilities {
-  .container {
-    @apply w-full max-w-8xl mx-auto;
-  }
-}
-
 html {
   scroll-behavior: smooth;
+    padding: "50px";
+
+}
+
+body{
+  padding: "50px";
 }
 
 section {
